re PR c/8518 (ICE when compiling mplayer)

PR c/8518
	* c-decl.c (duplicate_decls): Outline the second definition
	of an extern inline function in all cases.

From-SVN: r59409